# Numerical-methods-IWT

./: .gitignore  61  README.md  l1_1.cpp  l1_test.cpp
gui/: calculator.py  custom_loyauts.py  main.py  report_generator.py  test_task.py  test_task_plotter.py  test_task_settings_manager.py  test_task_ui.py
gui/calculation/: MANIFEST.in  __init__.py  calculation.cpp  calculation.pyx  calculation_lib  calculation_lib.cpp  calculation_lib.h  calculation_lib.pxd  pyproject.toml
gui/calculations/: MANIFEST.in  __init__.py  calculation.cpp  calculation.pyx  calculation_lib.cpp  calculation_lib.pxd  pyproject.toml  setup.py
saves/: bols.csv  bols.json  bolshoe_E_om.csv  bolshoe_E_om.json  stabilnoe_sosto.csv  stabilnoe_sosto.json  test.csv  test.json  test_task.csv  test_task.json
